<resources>
    <string name="app_name">Krakow Tour Guide App</string>
    <string name="launch_activity_heading">Krakow Tour Guide</string>
    <string name="launch_activity_body">Welcome in Krakow, the best city in the world, where I am living</string>
    <string name="launch_activity_button">get started</string>
    <string name="nav_drawer_heading">Welcome in Krakow</string>
    <string name="nav_drawer_category_1">Top Attractions</string>
    <string name="nav_drawer_category_2">Sights</string>
    <string name="nav_drawer_category_3">Food and Drink</string>
    <string name="nav_drawer_category_4">Events</string>
    <string name="nav_drawer_category_5">To Do</string>
    <string name="nav_drawer_sub_item">Other</string>
    <string name="nav_drawer_category_about">About</string>
    <string name="nav_drawer_category_exit">Exit</string>
    <string name="nav_bottom_item_1">Home</string>
    <string name="nav_bottom_item_2">Favorites</string>
    <string name="tab_restaurants">restaurants</string>
    <string name="tab_bars">bars</string>
    <string name="tab_clubs">clubs</string>
    <string name="tab_museums">museums</string>
    <string name="tab_activities">activities</string>
    <string name="tab_around">around</string>
    <string name="tab_overview">overview</string>
    <string name="tab_history">history</string>
    <string name="tab_info">info</string>
    <string name="detail_title">Title of something</string>
    <string name="detail_description">This is something that will become something else when
        I put it here but I dont know when exactly yet.</string>
    <string name="detail_button_map">map</string>
    <string name="detail_button_web">web</string>
    <string name="detail_button_phone">phone</string>
    <string name="detail_time">time</string>
    <string name="detail_address">address</string>
    <string name="detail_phone">phone</string>
    <string name="about_fragment_text">Project 5 - Tour Guide App
        \n
        \nAndroid Basics by Google Nanodegree Program
        \n
        \n Author: Anna Buczek
        \n
        \nAll of the information come from Wikipedia.
        \n
        \nAll of the photographs come with Creative Common Licence.
        \n
        \nSolutions and code based on knowledge obtained from Android Basics by Google Nanodegree
        Program, StackOverflow answers and free tutorials.
    </string>
    <string name="home_fragment_overview"><b>KRAKÓW</b>
        \n
        \nKraków, also spelled Cracow or Krakow is the second
        largest and one of the oldest cities in Poland. Situated on the Vistula River
        (Polish: Wisła) in the Lesser Poland (Polish: Małopolska) region, the city dates back
        to the 7th century.\n
        \nKraków has traditionally been one of the leading centres of Polish
        academic, cultural and artistic life and is one of Poland\'s most important economic hubs.
        It was the capital of the Crown of the Kingdom of Poland from 1038 to 1569.\n
        \nThe city has grown from a Stone Age settlement to Poland\'s second most important city.
        It began as a hamlet on Wawel Hill and was already being reported as a busy trading
        centre of Slavonic Europe in 965. With the establishment of new universities and
        cultural venues at the emergence of the Second Polish Republic in 1918 and throughout
        the 20th century, Kraków reaffirmed its role as a major national academic and artistic
        centre.\n
        \nKraków is home to Jagiellonian University, one of the oldest universities in
        the world and traditionally Poland\'s most reputable institution of higher learning.\n
        \nIn 2000, Kraków was named European Capital of Culture. In 2013 Kraków was officially
        approved as a UNESCO City of Literature. It is also a global city with the ranking
        of high sufficiency by GaWC. Cited as one of Europe\'s most beautiful cities,
        as well as one of the most unique destinations in the world. The city hosted
        the World Youth Day in July 2016.</string>
    <string name="home_fragment_history"><b>TIMELINE</b>
        \n
        \n<b>966 -</b> First written record of the city\n
        \n<b>990 -</b> Incorporated into the Piast dynasty\n
        \n<b>1038 -</b> Kraków becomes the capital of Poland\n
        \n<b>1241 -</b> The beginning of 50 years of Mongol mayhem\n
        \n<b>1257 -</b> Kraków granted municipal rights\n
        \n<b>1320 -</b> Coronation of King Władysław the Short in Wawel Cathedral, the first royal coronation in Kraków\n
        \n<b>1335 -</b> Kazimierz is founded on the eastern bank of the Wisła River\n
        \n<b>1364 -</b> Jagiellonian University founded\n
        \n<b>1386 -</b> Kraków wedding of Polish Queen Jadwiga and Lithuanian grand duke Jagiełło creates the Polish-Lithuanian Commonwealth\n
        \n<b>1596 -</b> Polish capital moved to Warsaw\n
        \n<b>1655 -</b> Swedish army captures and devastates the city\n
        \n<b>1734 -</b> Coronation of King August III, the final coronation in Wawel Cathedral\n
        \n<b>1791 -</b> The May 3rd Constitution is passed, the First Partition of Poland follows\n
        \n<b>1794 -</b> Prussian army captures Kraków after the Kościuszko Uprising, city\’s regalia stolen and lost forever\n
        \n<b>1796 -</b> Kraków becomes part of Austrian Galicia after the Third Partition of Poland\n
        \n<b>1918 -</b> Poland returns to the map of Europe\n
        \n<b>1939 -</b> Nazi occupation begins\n
        \n<b>1941 -</b> The Jewish Ghetto is established in the Podgórze district\n
        \n<b>1942 -</b> Establishment of the Płaszów concentration camp in Podgórze\n
        \n<b>1943 -</b> Liquidation of the Kraków Ghetto\n
        \n<b>1945 -</b> Kraków \’liberated\’ by the Soviet Army\n
        \n<b>1947 -</b> Construction begins on Nowa Huta\n
        \n<b>1978 -</b> Kraków\’s Old Town, Wawel and Kazimierz added to the UNESCO World Heritage List,
        Karol Wojtyła inaugurated as Pope John Paul II\n
        \n<b>1983 -</b> Lech Wałęsa wins the Nobel Peace Prize\n
        \n<b>1989 -</b> First free elections in Poland in 45 years, Communist regime crumbles\n
        \n<b>1999 -</b> Poland joins NATO\n
        \n<b>2000 -</b> Kraków is the first Polish city to be named \'European Capital of Culture\'\n
        \n<b>2004 -</b> Poland joins the European Union\n
        \n<b>2005 -</b> Pope John Paul II passes away plunging PL into national mourning\n
        \n<b>2010 -</b> President Lech Kaczyński and 95 other Polish delegates die in a plane crash near Smoleńsk, Russia\n
        \n<b>2012 -</b> PL successfully hosts the Euro 2012 football tournament\n
        \n<b>2013 -</b> Kraków is designated official UNESCO \'City of Literature\'\n
        \n<b>2016 -</b> Kraków hosts Catholic World Youth Day\n

</string>
    <string name="home_fragment_info"><b>GEOGRAPHY</b>
        \n
        \nKraków lies in the southern part of Poland, on the Vistula River, in a valley at the
        foot of the Carpathian Mountains, 219 m above sea level, halfway between the Jurassic
        Rock Upland (Polish: Jura Krakowsko-Częstochowska) to the north, and the Tatra Mountains
        100 km to the south, constituting the natural border with Slovakia and the Czech Republic,
        230 km west from the border with Ukraine.
        \n
        \n<b>CLIMATE</b>
        \n
        \nKraków has a humid continental climate according to the Köppen climate classification system,
        which can be classified as an oceanic climate. Average temperatures in summer range from
        17.0 to 19.2 °C and in winter from −2.0 to −0.6 °C.
        \n
        \n<b>PARKS AND GARDENS</b>
        \n
        \nThere are about 40 parks in Kraków including dozens of gardens and forests.
        Several, like the Planty Park, Botanical Garden, Park Krakowski, Jordan Park and Błonia Park
        are located in the centre of the city with Zakrzówek, Lasek Wolski forest, Strzelecki Park
        and Park Lotników (among others) in the surrounding districts.
        \n
        \n<b>DISTRICTS</b>
        \n
        \nKraków is divided into 18 administrative districts (dzielnica) or boroughs,
        each with a degree of autonomy within its own municipal government. Prior to March 1991,
        the city had been divided into four quarters which still give a sense of identity to Kraków
        – the towns of Podgórze, Nowa Huta, and Krowodrza which were amalgamated into the city
        of Kraków as it expanded, and the ancient town centre of Kraków itself.
        \n
        \n<b>ECONOMY</b>
        \n
        \nKraków is one of Poland\'s most important economic centres and the economic hub of the
        Lesser Poland (Małopolska) region. Since the fall of communism, the private sector has
        been growing steadily. There are about 50 large multinational companies in the city,
        including Google, IBM, Royal Dutch Shell, Motorola, Delphi, MAN SE, General Electric,
        ABB, Aon Hewitt, Cisco Systems Hitachi, Philip Morris, Capgemini, and Sabre Holdings,
        along with other British, German and Scandinavian-based firms. The city is also the global
        headquarters for Comarch, a Polish enterprise software house.
        \n
        \n<b>POPULATION</b>
        \n
        \nThe city has a population of approximately 760,000, with approximately 8 million additional
        people living within a 100 km radius of its main square.
        \n
        \n<b>RELIGION</b>
        \n
        \nThe metropolitan city of Kraków is known as the city of churches. The abundance of landmark,
        historic temples along with the plenitude of monasteries and convents earned the city a
        countrywide reputation as the \"Northern Rome\" in the past. The churches of Kraków comprise
        over 120 places of worship (2007) of which over 65 were built in the 20th century.
        More are still being added. In addition to Roman Catholicism, other denominations present
        include Jehovah\'s Witnesses, Mariavite Church, Polish Catholic Church, Polish Orthodox
        Church, Protestantism and Latter-Day Saints.
        \n
        \n<b>CULTURE</b>
        \n
        \nKraków was named the official European Capital of Culture for the year 2000 by the
        European Union. It is a major attraction for both local and international tourists,
        attracting seven million visitors a year. Major landmarks include the Main Market Square
        with St. Mary\'s Basilica and the Sukiennice Cloth Hall, the Wawel Castle, the National Art
        Museum, the Zygmunt Bell at the Wawel Cathedral, and the medieval St Florian\'s Gate with
        the Barbican along the Royal Coronation Route. Kraków has 28 museums and public art galleries.
        Among them is the National Museum featuring works by Leonardo da Vinci and Rembrandt.
        \n
        \n<b>TOURISM</b>
        \n
        \nAccording to recent official statistics, in 2016 Kraków was visited by over 12 million
        tourists including 2.9 million foreign travelers.
        Most foreign tourists came from Great Britain, followed by German, Italian, Portuguese,
        Spanish, Canadian and American visitors.
</string>
    <string name="top1_indicator">top1</string>
    <string name="top1_title">Wawel Castle</string>
    <string name="top1_description_short">Royal Castle on Wawel Hill</string>
</resources>