<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.krakowtourguideapp.DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MyActionBarTheme" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/detail_padding_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_card_view_image" />

            <TextView
                android:id="@+id/detail_title"
                style="@style/DetailTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_title" />


            <TextView
                android:id="@+id/detail_description"
                style="@style/DetailDescriptionTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/detail_padding_main"
                android:paddingTop="@dimen/detail_padding_main">

                <Button
                    android:id="@+id/detail_button_map"
                    style="@style/DetailButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_map"
                    android:text="@string/detail_button_map" />

                <Button
                    android:id="@+id/detail_button_web"
                    style="@style/DetailButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_web"
                    android:text="@string/detail_button_web" />

                <Button
                    android:id="@+id/detail_button_phone"
                    style="@style/DetailButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_phone"
                    android:text="@string/detail_button_phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight"
                android:layout_marginBottom="@dimen/detail_padding_main">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/detail_time_text_view"
                    style="@style/DetailBodyTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight"
                android:layout_marginBottom="@dimen/detail_padding_main">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/detail_address_text_view"
                    style="@style/DetailBodyTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_address" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/detail_phone_text_view"
                    style="@style/DetailBodyTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_phone" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>
